--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "knex-cleaner": "^1.3.0",
     "morgan": "^1.9.1",
     "nodemon": "^2.0.4",
-    "pg": "^7.16.0",
+    "pg": "^7.18.2",
+    "sqlite3": "^5.0.0",
     "supertest": "^4.0.2"
   }
 }
