add delete list endpoint just to delete a couple lists

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "nodemon": "^2.0.4",
     "pg": "^7.18.2",
     "sqlite3": "^5.0.0",
+    "stripe": "^8.92.0",
     "supertest": "^4.0.2"
   }
 }
