--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/cahaug/yourLinks#readme",
   "dependencies": {
+    "@maxmind/geoip2-node": "^1.6.0",
     "axios": "^0.20.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
