--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^3.21.2",
+    "ip2location-nodejs": "^8.4.0",
     "jest": "^25.1.0",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.20.4",
