--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "pg": "^7.18.2",
     "sqlite3": "^5.0.0",
     "stripe": "^8.92.0",
-    "supertest": "^4.0.2"
+    "supertest": "^4.0.2",
+    "ua-parser-js": "^0.7.22"
   }
 }
