--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "cross-env": "^6.0.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "form-data": "^3.0.0",
     "helmet": "^3.21.2",
     "ip2location-nodejs": "^8.4.0",
     "jest": "^25.1.0",
