--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "knex": "^0.20.4",
     "knex-cleaner": "^1.3.0",
     "morgan": "^1.9.1",
+    "node-fetch": "^2.6.1",
     "nodemailer": "^6.4.11",
     "nodemon": "^2.0.4",
     "pg": "^7.18.2",
