--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "bcryptjs": "^2.4.3",
     "bowser": "^2.11.0",
     "cors": "^2.8.5",
+    "cross-blob": "^2.0.0",
     "cross-env": "^6.0.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
