--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
     "@maxmind/geoip2-node": "^1.6.0",
     "axios": "^0.20.0",
     "bcryptjs": "^2.4.3",
+    "blob": "^0.1.0",
     "bowser": "^2.11.0",
     "cors": "^2.8.5",
-    "cross-blob": "^2.0.0",
     "cross-env": "^6.0.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
