--- a/package.json
+++ b/package.json
@@ -30,8 +30,11 @@
     "cross-env": "^6.0.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-fileupload": "^1.2.0",
     "form-data": "^3.0.0",
+    "fs": "0.0.1-security",
     "helmet": "^3.21.2",
+    "imageshack": "^0.2.1",
     "ip2location-nodejs": "^8.4.0",
     "jest": "^25.1.0",
     "jsonwebtoken": "^8.5.1",
@@ -39,8 +42,9 @@
     "knex-cleaner": "^1.3.0",
     "morgan": "^1.9.1",
     "nodemailer": "^6.4.11",
-    "nodemon": "^2.0.4",
+    "nodemon": "^2.0.6",
     "pg": "^7.18.2",
+    "querystring": "^0.2.0",
     "sqlite3": "^5.0.0",
     "stripe": "^8.92.0",
     "supertest": "^4.0.2",
