--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "sqlite3": "^5.0.0",
     "stripe": "^8.92.0",
     "supertest": "^4.0.2",
-    "ua-parser-js": "^0.7.22"
+    "ua-parser-js": "^0.7.22",
+    "verify-paddle-webhook": "^1.0.0"
   }
 }
