--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.20.4",
     "knex-cleaner": "^1.3.0",
+    "maxmind": "^4.3.1",
     "morgan": "^1.9.1",
     "nodemailer": "^6.4.11",
     "nodemon": "^2.0.6",
