--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-fileupload": "^1.2.0",
+    "express-validator": "^6.9.2",
     "form-data": "^3.0.0",
     "fs": "0.0.2",
     "helmet": "^3.21.2",
@@ -49,12 +50,12 @@
     "nodemon": "^2.0.6",
     "pg": "^7.18.2",
     "querystring": "^0.2.0",
+    "snyk": "^1.437.4",
     "sqlite3": "^5.0.1",
     "stripe": "^8.129.0",
     "supertest": "^4.0.2",
     "ua-parser-js": "^0.7.23",
-    "verify-paddle-webhook": "^1.0.0",
-    "snyk": "^1.437.4"
+    "verify-paddle-webhook": "^1.0.0"
   },
   "snyk": true
 }
