--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "querystring": "^0.2.0",
     "snyk": "^1.437.4",
     "sqlite3": "^5.0.1",
+    "stream": "0.0.2",
     "stripe": "^8.129.0",
     "supertest": "^4.0.2",
     "ua-parser-js": "^0.7.23",
