--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "form-data": "^3.0.1",
     "fs": "0.0.2",
     "helmet": "^3.21.2",
+    "hpp": "^0.2.3",
     "imageshack": "^0.2.1",
     "ip2location-nodejs": "^8.4.0",
     "jest": "^26.6.3",
